--- a/styles/style.css
+++ b/styles/style.css
@@ -142,7 +142,7 @@ header {
 }
 
 .header__theme-menu-button:hover {
-  border: 1px solid rgba(255, 0, 112, 0.5);
+  border: 1px solid rgba(255, 0, 112, 0.4);
 }
 
 .content {
@@ -200,11 +200,10 @@ h4.card__title {
 }
 
 .card__link:hover {
-  text-decoration: underline;
+  border-bottom: 1px solid var(--text-color);
 }
 
-.card__link:focus-visible {
-  outline: none;
+.card__link:focus {
   border: 1px solid var(--bg-color);
 }
 
